# untitled

./: .envrc  .gitignore  Cargo.toml  flake.nix  rust-analyzer.toml  test.tiled-project  test.tiled-session  tiled_types_export.json
.cargo/: config.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: kzj5lay07flz6l4w4li884gjyyjjicgi-source  q7in6vj1l6qnd10dn2r9xqynlxhx8s8c-source  wjf9a1hwxzkdjzjsapvrn1fn617i20ww-source
assets/config/: wall_textures.yaml
assets/maps/: test.events.json  test.objects.json  test.tmx
assets/particles/: blue_orb_glow.json  dust_step.json  fire_small.json  sparkle_heal.json
assets/shaders/: billboard.wgsl  billboard_shadow_prepass.wgsl  billboard_shadow_prepass_vertex.wgsl  lighting_post.wgsl  particle_lights.wgsl  post_process_custom.wgsl  terrain_fill.wgsl
assets/textures/: grass.qoi
assets/tilesets/: ADWinter_TileA1.tsx  ADWinter_TileA2.tsx  ADWinter_TileA3.tsx  ADWinter_TileA5.tsx  ADWinter_TileB.tsx  ADWinter_TileC.tsx  ADWinter_TileC_interior.tsx  ADWinter_TileD.tsx  ADWinter_TileD_interior.tsx  ADWinter_TileE.tsx  ADWinter_TileE_interior.tsx  AD_jungle_TileA1.tsx  AD_jungle_TileA5.tsx  AD_jungle_TileB(2).tsx  AD_jungle_TileB.tsx  AD_jungle_TileC(2).tsx  AD_jungle_TileC.tsx  AD_jungle_TileD.tsx  AD_jungle_TileE.tsx  City_TileB.tsx  City_TileC.tsx  City_TileD.tsx  (+34 more)
docs/: architecture.md
macros/: Cargo.toml
src/: app_state.rs  dev_scene.rs  fps_overlay.rs  lib.rs  main.rs
tools/: generate_maps.py  tileconv  tileconv.py
(+185 files in other folders)
