[workspace]
members = [".", "macros"]

[package]
name = "untitled"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", features = ["wayland", "qoi"] }
bevy_ecs_tilemap = "0.18"
bevy_ecs_tiled = { version = "0.11", features = ["physics"] }
bevy_egui = "0.39"
bevy_hanabi = { version = "0.18", features = ["3d"] }
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize", "send"] }
avian3d = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
pathfinding = "4"
rand = "0.8"
bytemuck = { version = "1", features = ["derive"] }
half = "2"
image = "0.25"
tiled = "0.14"
untitled_macros = { path = "macros" }

[features]
default = ["dev_tools"]
dev_tools = []
tracy = ["bevy/trace_tracy"]

# Fast dev builds: optimize deps (physics, math, rendering) but keep our code debuggable
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
